BugFixes for 2.0.4: *) Cutting of text in message box of Windows Chrome/FF for non-database pdb entry *) Overflow of text in status panel's progress text *) Tooltip occurring in the header panel for uploaded files *) Overflow of "Interface Analysis of" text in some Linux Chrome

--- a/war/Crkwebui.css
+++ b/war/Crkwebui.css
@@ -130,6 +130,7 @@
 .eppic-pdb-identifier-label {
 	font-size: 22px;
 	font-weight: bold;
+	margin-right: 5px;
 }
 .eppic-pdb-identifier-label A:link {text-decoration: none; color: #15428B;}
 .eppic-pdb-identifier-label A:visited {text-decoration: none; color: #15428B;}
@@ -329,6 +330,8 @@
 	 background-position:center;
 }
 
-.eppic-seq-info-panel-more-button-over{
-	 
+.eppic-seq-info-panel-warning-button{
+	  background-image: url('resources/icons/warning_icon_14x14.png');
+	 background-repeat:no-repeat;
+	 background-position:center;
 }
